[package]
name = "shuttle-hello"
version = "0.1.0"
edition = "2021"
description = "A short description of my package"
authors = ["Peter Zingg <peter.zingg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rocket = "0.5.0-rc.1"
shuttle-service = { version = "0.2", features = ["web-rocket"] }
